Fix boastful overflow. Closes #141

--- a/public/stylesheets/sass/darkblog.scss
+++ b/public/stylesheets/sass/darkblog.scss
@@ -125,6 +125,10 @@ blockquote {
   display: inline;
 }
 
+.row {
+  overflow: visible;
+}
+
 header {
   @include box-shadow(0px, 0px, 5px, black);
 
